# mini-cctv

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pm2.config.cjs  start.sh  vite.config.ts
app/features/live-view/: live-viewer.tsx  types.ts  use-webrtc-stream.ts
app/routes/: home.tsx
backend/: main.py  pyproject.toml
backend/cctv/: app.py  config.py  detector.py  models.py  notifier.py  scenario_state.py  services.py
backend/data/: scenario_state.sqlite3
