[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
